resources/css/aboutme.css
nav {
  background-color: #EDC7B7;
  color: #AC3B61
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

nav li {
  margin-left: 70px;

}

nav a {
  color: #AC3B61;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 15px;
}

nav a:hover {
  color: #AC3B61;
}

nav a::before {
  content: '';
  display: block;
  height: 5px;
  background-color: #AC3B61;

  
  top: 0;
  width: 0%;

  transition: all ease-in-out 250ms;
}

nav a:hover::before {
  width: 100%;
}

body {
  background-color: #EDC7B7;
}

footer {
  color: #AC3B61;
  position: relative;
}

